# NanoR

./: .gitignore  CMakeLists.txt  README.md
00-nanoR/: CMakeLists.txt  sandbox.cpp
00-nanoR/shader/: common.vert.glsl  lit.frag.glsl  uniforms.h  unlit.frag.glsl
00-nanoR/src/: nanor.h  nanorpch.h
00-nanoR/src/application/: application.cpp
00-nanoR/src/asset/: asset_loader.cpp  asset_loader.h
00-nanoR/src/event/: event.h  key_event.h  window_event.h
00-nanoR/src/global/: global_context.cpp
00-nanoR/src/layer/: layer.cpp  layer.h  ui_layer.cpp  ui_layer.h
00-nanoR/src/light/: light.cpp  light.h
00-nanoR/src/logger/: logger.cpp  logger.h
00-nanoR/src/platform/: application_opengl.cpp  application_opengl.h  window_linux.cpp
00-nanoR/src/platform/opengl/: render_resource_opengl.h  renderer_opengl.cpp  renderer_opengl.h  resource_type_opengl.h  rhi_opengl.cpp  rhi_opengl.h  rhi_type_opengl.h
00-nanoR/src/render/: material.cpp  material.h  mesh.cpp  mesh.h  renderer.h  resource_manager.h  resource_manger.cpp  rhi.h  rhi_opengl4.cpp  rhi_opengl4.h  rhi_resource.h  rhi_type.h  rhi_type_opengl.h
00-nanoR/src/resource/: mesh.cpp  mesh.h  model.cpp  model.h  resource.cpp  resource.h  resource_manager.h  resource_manger.cpp  resource_type.h
00-nanoR/src/scene/: component.hpp  entity.hpp  entity.tpp  scene.cpp  scene.tpp
00-nanoR/src/window/: window.h  window_base.h
01-create-window/: CMakeLists.txt
01-create-window/src/: main.cpp
02-simple-triangle/: CMakeLists.txt
02-simple-triangle/src/: main.cpp
03-shader-class/: CMakeLists.txt
03-shader-class/shader/: frag.fs  vert.vs
03-shader-class/src/: main.cpp  shader.h
04-texture/: CMakeLists.txt
04-texture/shader/: frag.fs  vert.vs
04-texture/src/: main.cpp  shader.h
05-simple-cube/: CMakeLists.txt
05-simple-cube/src/: main.cpp
06-camera/: CMakeLists.txt
06-camera/shader/: frag.fs  vert.vs
06-camera/src/: camera.h  main.cpp  shader.h
07-lighting/: CMakeLists.txt
07-lighting/shader/: frag.fs  light-frag.fs  vert.vs
07-lighting/src/: main.cpp  shader.h
08-lighting-map/: CMakeLists.txt
08-lighting-map/src/: main.cpp
09-multi-light/: CMakeLists.txt
09-multi-light/shader/: frag.fs  light-vert.vs  vert.vs
09-multi-light/src/: camera.h  main.cpp  shader.h  texture.h
10-mesh/: CMakeLists.txt
10-mesh/shader/: cube_frag.glsl  cube_vert.glsl
10-mesh/src/: main.cpp  mesh.hpp
11-load-model/shader/: light_frag.glsl
11-load-model/src/: main.cpp  mesh.hpp  model.hpp  shader.h  shader.hpp
12-imgui/: CMakeLists.txt
12-imgui/shader/: herta_frag.glsl  light_frag.glsl  light_vert.glsl
12-imgui/src/: camera.hpp  main.cpp  model.hpp  shader.hpp
13-input-system/: CMakeLists.txt
13-input-system/src/: main.cpp  material.hpp  mesh.hpp  model.hpp
14-depth-test/src/: main.cpp  mesh.hpp  model.hpp
15-stencil-test/shader/: light_frag.glsl  obj_frag.glsl
15-stencil-test/src/: main.cpp  mesh.hpp
16-alpha-blend/src/: main.cpp  model.hpp
17-face-culling/shader/: obj_frag.glsl
17-face-culling/src/: main.cpp  mesh.hpp  model.hpp  utils.hpp
18-frame-buffer/: CMakeLists.txt
18-frame-buffer/shader/: common_vert.glsl  unlit_frag.glsl
18-frame-buffer/src/: main.cpp  utils.hpp
18-frame-buffer/src/context/: context.hpp
19-cube-map/shader/: lit.frag.glsl  skybox.frag.glsl  unlit.frag.glsl
19-cube-map/src/: main.cpp  material.hpp  model.hpp
19-sky-box/shader/: refract.frag.glsl  skybox.vert.glsl
19-sky-box/src/: main.cpp  model.hpp
20-interface-block/shader/: common.vert.glsl  lit.frag.glsl  unlit.frag.glsl
20-interface-block/src/: main.cpp
21-bling-phong-and-gamma/shader/: lit.frag.glsl
21-bling-phong-and-gamma/src/: main.cpp
21-blinn-phong/shader/: common.vert.glsl
21-blinn-phong/src/: main.cpp  model.hpp
22-shadow/shader/: lit.frag.glsl  skybox.vert.glsl
22-shadow/src/: main.cpp  utils.hpp
23-pbr/shader/: common.vert.glsl  pbr.frag.glsl  unlit.frag.glsl
23-pbr/src/: main.cpp  utils.hpp
24-ibl/shader/: common.vert.glsl  equirectangle_to_cubemap.frag.glsl  ibl_diffuse.frag.glsl  ibl_specular_lut.frag.glsl  ibl_specular_prefilter.frag.glsl  pbr.frag.glsl  reflect.frag.glsl  skybox.frag.glsl  skybox.vert.glsl  unlit.frag.glsl
24-ibl/src/: main.cpp  model.hpp
25-vulkan-start/: CMakeLists.txt
25-vulkan-start/shader/: triangle.frag.glsl  triangle.vert.glsl
25-vulkan-start/src/: main.cpp
25-vulkan-start/src/shader_compiler/: shader_compiler.hpp
25-vulkan-start/src/window/: window.cpp  window.hpp
26-deep-assimp/: CMakeLists.txt
26-deep-assimp/src/: main.cpp
common/glad/: glad.c
create-window/: CMakeLists.txt
nanoR/: CMakeLists.txt  sandbox.cpp
nanoR/shader/: common.vert.glsl  lit.frag.glsl  pbr.frag.glsl  test.frag.glsl  ui.vert.glsl  uniforms.h  unlit.frag.glsl
nanoR/src/: main.cpp  nanor.h  nanorpch.h
nanoR/src/application/: application.cpp  application.h
nanoR/src/ecs/: component.hpp  entity.hpp  mpu.hpp  settings.hpp  world.cpp  world.hpp
nanoR/src/event/: event.h  key_event.h  mouse_event.h  window_event.h
nanoR/src/global/: global_context.h
nanoR/src/input/: input_system.h
nanoR/src/layer/: layer.cpp  layer.h  layer_stack.cpp  layer_stack.h  ui_layer.cpp  ui_layer.h
nanoR/src/light/: light.cpp  light.h
nanoR/src/logger/: logger.h
nanoR/src/platform/: application_opengl.cpp  application_opengl.h  input_system_glfw.h  linux_window.cpp  linux_window.h  ui_layer_glfw_opengl3.cpp  ui_layer_glfw_opengl3.h  window_linux.cpp  window_linux.h
nanoR/src/platform/opengl/: render_pipeline.h  render_resource_opengl.h  renderer_opengl.cpp  renderer_opengl.h  rhi_opengl.cpp  rhi_opengl.h  rhi_type_opengl.h
nanoR/src/render/: camera.h  material.cpp  material.h  mesh_data.h  renderer.h  resource_manager.h  resource_manger.cpp  resource_type.h  rhi.h  rhi_type.h
nanoR/src/scene/: component.hpp  entity.hpp  entity.tpp  scene.cpp  scene.hpp  scene.tpp
nanoR/src/window/: linux_window.cpp  linux_window.h  window.h  window_base.h  window_prop.h
nanoR/test/: main.cpp
simple-triangle/: CMakeLists.txt
(+36 files in other folders)
