get_filename_component(EXE_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
string(REPLACE " " "_" EXE_NAME ${EXE_NAME})
include_directories(./src)
file(GLOB_RECURSE src COFIGURE_DEPENDS src/*.cpp)
# aux_source_directory(./src src)
add_executable(${EXE_NAME} ${src})
target_link_libraries(${EXE_NAME} PRIVATE glfw glad::glad assimp::assimp imgui)
